--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^5.23.1",
+    "gsap": "^3.12.7",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
